More progress on dependency injection, add TurnController, add ScriptSetArea as native function